Bug 1612992 - Don't replace the nsIRequest passed to OnStart/StopRequest with nsViewSourceChannel if we don't need it. r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D63285